# wooldridge-shiny

./: .gitignore  README.md  pyproject.toml
wooldridge_shiny/: __main__.py  app.py  include.py  mainpanel.py  pyproject.toml  requirements.txt  type.py  woo.py
wooldridge_shiny/static/: readme.md
