[project]
name = "wooldridge-shiny"
version = "0.1.0"
description = "A Shiny app"
authors = [{ name = "Kenji Sato", email = "mail@kenjisato.jp" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mdpd>=0.2.1",
    "numpy>=2.3.1",
    "seaborn>=0.13.2",
    "shiny>=1.4.0",
    "stargazer>=0.0.7",
    "statsmodels>=0.14.5",
    "wooldridge>=0.4.5",
]

[project.scripts]
wooldridge-shiny = "wooldridge_shiny.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
